# advent-of-code-2025

./: CMakeLists.txt  common.h  pyproject.toml
day1/: day1.1.cpp  day1.1.py  day1.2.cpp  day1.2.py
day10/: day10.1.cpp  day10.2.cpp  too-slow-day10.2.cpp
day11/: check_for_cycles.py  day11.1.cpp  day11.2.cpp
day12/: day12.cpp
day2/: day2.1.cpp  day2.1.py  day2.2.cpp  day2.2.py
day3/: day3.1.cpp  day3.2.cpp
day4/: day4.1.cpp  day4.2.cpp
day5/: day5.1.cpp  day5.2.cpp
day6/: day6.1.cpp  day6.2.cpp
day7/: day7.1.cpp  day7.2.cpp
day8/: day8.1.cpp  day8.2.cpp
day9/: day9.1.cpp  day9.2.cpp
